<resources>
    <string name="app_name">MiPrimeraApp</string>
    <string name="txt_num1">Escribe el primer numero</string>
    <string name="txt_num2">Escribe el segundo numero</string>
    <string name="B_Suma">Suma</string>
    <string name="B_Resta">Resta</string>
    <string name="B_Dividir">Dividir</string>
    <string name="txt_Resultado">Resultado</string>
    <string name="dividir">DIVIDIR</string>
    <string name="multiplicacion">MULTIPLICACION</string>
</resources>
