<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_num1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_num2"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num1"
        android:autofillHints="" />

    <Button
        android:id="@+id/B_Suma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="52dp"
        android:hint="@string/B_Suma"
        android:onClick="Sumar"
        android:text="@string/B_Suma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num2" />

    <TextView
        android:id="@+id/txt_Resultado"
        android:layout_width="159dp"
        android:layout_height="57dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:hint="@string/txt_Resultado"
        android:text="@string/txt_Resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_Multiplicacion" />

    <Button
        android:id="@+id/B_Resta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="273dp"
        android:hint="@string/B_Resta"
        android:onClick="Restar"
        android:text="@string/B_Resta"
        app:layout_constraintStart_toEndOf="@+id/B_Suma"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/B_Multiplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="50dp"
        android:hint="@string/multiplicacion"
        android:onClick="Multiplicar"
        android:text="@string/multiplicacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_Suma" />

    <Button
        android:id="@+id/B_DIVIDIR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="48dp"
        android:hint="@string/B_Dividir"
        android:onClick="Dividir"
        android:text="@string/dividir"
        app:layout_constraintStart_toEndOf="@+id/B_Multiplicacion"
        app:layout_constraintTop_toBottomOf="@+id/B_Resta" />

</androidx.constraintlayout.widget.ConstraintLayout>